<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFrag">

    <TextView
        android:id="@+id/tvHomeHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/title_home"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/plan"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btnCreateList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape"
            android:text="@string/createList"
            android:textColor="@color/whiteColor" />

        <Button
            android:id="@+id/btnGenList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_shape"
            android:text="@string/generateList"
            android:textColor="@color/whiteColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@color/line_grey">
        </LinearLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elegantTextHeight="false"
            android:gravity="center"
            android:text="@string/buy"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btnActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_shape"
            android:text="@string/actual"
            android:textColor="@color/whiteColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_grey"
            android:orientation="vertical">
        </LinearLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/manage"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btnProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_shape"
            android:textColor="@color/whiteColor"
            android:text="@string/products" />

        <Button
            android:id="@+id/btnStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_shape"
            android:textColor="@color/whiteColor"
            android:text="@string/statistics" />
    </LinearLayout>
</LinearLayout>
