<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="vertical"
    tools:context=".fragments.ShoppingListFrag">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/shopping_list"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/info_click_to_buy"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:text="@string/info_swipe_to_delete"
        android:textSize="12sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvShoppingList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>