<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AdjustStatsFrag">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/info_generate_statistics"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/radio_group_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18">

        <RadioButton
            android:id="@+id/rbTimePer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/time_period"
            android:textColor="@color/text_color" />

        <RadioButton
            android:id="@+id/rbDatePer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/time_interval"
            android:textColor="@color/text_color" />

        <RadioButton
            android:id="@+id/rbAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/info_all_history"
            android:textColor="@color/text_color" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linLayDatePickers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/etStartDate"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_shape"
                android:text="@string/enter_start_date"
                android:textColor="@color/whiteColor"
                android:textSize="12sp" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/line_grey"
            android:orientation="vertical">
        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/etEndDate"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/enter_end_date"
                android:textColor="@color/whiteColor"
                android:textSize="12sp" />
        </TableRow>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <TableRow
            android:id="@+id/trTimePer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/select_time_per"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spTimePer"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:entries="@array/timePer" />
        </TableRow>

        <TableRow
            android:id="@+id/trDatePer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/select_time_interval"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <Spinner
        android:id="@+id/spCategoryStats"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:entries="@array/filter"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/linLayDatePickers" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Kategoria:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLayDatePickers" />

    <Button
        android:id="@+id/btnGenStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_shape"
        android:text="@string/show_statistics"
        android:textColor="@color/whiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCategoryStats" />

    <LinearLayout
        android:id="@+id/linLayExpenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/linear_layout_shape"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCategoryStats">

        <TextView
            android:id="@+id/tvTimePer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/timePer"
            android:textColor="@color/primaryText"
            android:textSize="20sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvInCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/inCateg"
                android:textColor="@color/primaryText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="end"
                android:text=""
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/summary"
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text=""
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>